Fix controls.component not showing scroll bar

--- a/src/app/seating/controls/controls.component.scss
+++ b/src/app/seating/controls/controls.component.scss
@@ -2,6 +2,9 @@
 .controls {
   position: relative;
   @include media-breakpoint-up(md) {
-    min-height: 100vh;
+    height: 100vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding-bottom: 10rem;
   }
 }
